--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   database: money_development
   pool: 5
   username: root
-  password: admin
+  password:
   socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
